; ModuleID = '/home/carl/AnghaBench/h2o/deps/brotli/c/tools/extr_brotli.c_OpenOutputFile.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/brotli/c/tools/extr_brotli.c_OpenOutputFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDOUT_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@BROTLI_TRUE = common dso_local global i64 0, align 8
@O_CREAT = common dso_local global i32 0, align 4
@O_EXCL = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@S_IRUSR = common dso_local global i32 0, align 4
@S_IWUSR = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"failed to open output file [%s]: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@BROTLI_FALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32**, i64)* @OpenOutputFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @OpenOutputFile(i8* %0, i32** %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32**, i32*** %6, align 8
  store i32* null, i32** %9, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %18, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @STDOUT_FILENO, align 4
  %14 = call i32 @MAKE_BINARY(i32 %13)
  %15 = call i32* @fdopen(i32 %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %16 = load i32**, i32*** %6, align 8
  store i32* %15, i32** %16, align 8
  %17 = load i64, i64* @BROTLI_TRUE, align 8
  store i64 %17, i64* %4, align 8
  br label %64

18:                                               ; preds = %3
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* @O_CREAT, align 4
  %21 = load i64, i64* %7, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  br label %26

24:                                               ; preds = %18
  %25 = load i32, i32* @O_EXCL, align 4
  br label %26

26:                                               ; preds = %24, %23
  %27 = phi i32 [ 0, %23 ], [ %25, %24 ]
  %28 = or i32 %20, %27
  %29 = load i32, i32* @O_WRONLY, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @O_TRUNC, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @S_IRUSR, align 4
  %34 = load i32, i32* @S_IWUSR, align 4
  %35 = or i32 %33, %34
  %36 = call i32 @open(i8* %19, i32 %32, i32 %35)
  store i32 %36, i32* %8, align 4
  %37 = load i32, i32* %8, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %26
  %40 = load i32, i32* @stderr, align 4
  %41 = load i8*, i8** %5, align 8
  %42 = call i8* @PrintablePath(i8* %41)
  %43 = load i32, i32* @errno, align 4
  %44 = call i8* @strerror(i32 %43)
  %45 = call i32 @fprintf(i32 %40, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %42, i8* %44)
  %46 = load i64, i64* @BROTLI_FALSE, align 8
  store i64 %46, i64* %4, align 8
  br label %64

47:                                               ; preds = %26
  %48 = load i32, i32* %8, align 4
  %49 = call i32* @fdopen(i32 %48, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %50 = load i32**, i32*** %6, align 8
  store i32* %49, i32** %50, align 8
  %51 = load i32**, i32*** %6, align 8
  %52 = load i32*, i32** %51, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %62, label %54

54:                                               ; preds = %47
  %55 = load i32, i32* @stderr, align 4
  %56 = load i8*, i8** %5, align 8
  %57 = call i8* @PrintablePath(i8* %56)
  %58 = load i32, i32* @errno, align 4
  %59 = call i8* @strerror(i32 %58)
  %60 = call i32 @fprintf(i32 %55, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %57, i8* %59)
  %61 = load i64, i64* @BROTLI_FALSE, align 8
  store i64 %61, i64* %4, align 8
  br label %64

62:                                               ; preds = %47
  %63 = load i64, i64* @BROTLI_TRUE, align 8
  store i64 %63, i64* %4, align 8
  br label %64

64:                                               ; preds = %62, %54, %39, %12
  %65 = load i64, i64* %4, align 8
  ret i64 %65
}

declare dso_local i32* @fdopen(i32, i8*) #1

declare dso_local i32 @MAKE_BINARY(i32) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #1

declare dso_local i8* @PrintablePath(i8*) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
